[gd_scene load_steps=12 format=2]

[ext_resource path="res://scripts/ship_one.gd" type="Script" id=1]
[ext_resource path="res://assets/images/ship_one.png" type="Texture" id=2]
[ext_resource path="res://assets/images/lighting.png" type="Texture" id=3]
[ext_resource path="res://scripts/exhaust_glow.gd" type="Script" id=4]
[ext_resource path="res://assets/sounds/thrust_sound.ogg" type="AudioStream" id=5]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 2, 4 )

[sub_resource type="Gradient" id=2]

offsets = PoolRealArray( 0, 0.672515, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 0.8125, 0.516193, 0.0539551, 1, 0.863281, 0.0573273, 0.0573273, 1 )

[sub_resource type="GradientTexture" id=3]

flags = 4
gradient = SubResource( 2 )
width = 2048

[sub_resource type="Curve" id=4]

min_value = 0.0
max_value = 1.0
bake_resolution = 100
_data = [ Vector2( 0.432883, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0.338867 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=5]

flags = 4
width = 2048
curve = SubResource( 4 )

[sub_resource type="ParticlesMaterial" id=6]

render_priority = 0
trail_divisor = 1
emission_shape = 0
flag_align_y = false
flag_rotate_y = false
flag_disable_z = true
spread = 45.0
flatness = 0.0
gravity = Vector3( 0, 98, 0 )
initial_velocity = 1.0
initial_velocity_random = 0.0
angular_velocity = 3.08846e-41
angular_velocity_random = 0.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 0.0
linear_accel_random = 0.0
radial_accel = 0.0
radial_accel_random = 0.0
tangential_accel = 0.0
tangential_accel_random = 0.0
damping = 0.0
damping_random = 0.0
angle = 45.0
angle_random = 1.0
scale = 1.5
scale_random = 0.0
scale_curve = SubResource( 5 )
color_ramp = SubResource( 3 )
hue_variation = 0.0
hue_variation_random = 0.0
anim_speed = 0.0
anim_speed_random = 0.0
anim_offset = 0.0
anim_offset_random = 0.0
anim_loop = false
_sections_unfolded = [ "Color" ]

[node name="ship_one" type="RigidBody2D"]

light_mask = 2
input_pickable = false
collision_layer = 2
collision_mask = 9
mode = 0
mass = 8.0
friction = 1.0
bounce = 0.0
gravity_scale = 1.0
custom_integrator = false
continuous_cd = 0
contacts_reported = 0
contact_monitor = false
sleeping = false
can_sleep = true
linear_velocity = Vector2( 0, 0 )
linear_damp = -1.0
angular_velocity = 0.0
angular_damp = -1.0
script = ExtResource( 1 )
_sections_unfolded = [ "Collision", "Visibility" ]
thrust = 16
max_thrust = 100
turn_speed = 0.5

[node name="Sprite" type="Sprite" parent="." index="0"]

light_mask = 2
texture = ExtResource( 2 )
_sections_unfolded = [ "Visibility" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="1"]

visible = false
shape = SubResource( 1 )

[node name="exhaust_flame" type="Particles2D" parent="." index="2"]

show_behind_parent = true
light_mask = 2
position = Vector2( 0, 3 )
emitting = false
amount = 6
lifetime = 0.4
one_shot = false
preprocess = 0.0
speed_scale = 1.0
explosiveness = 0.0
randomness = 0.0
fixed_fps = 0
fract_delta = true
visibility_rect = Rect2( -100, -100, 200, 200 )
local_coords = true
draw_order = 0
process_material = SubResource( 6 )
texture = null
normal_map = null
h_frames = 1
v_frames = 1
_sections_unfolded = [ "Drawing", "Time", "Visibility" ]

[node name="exhaust_glow" type="Light2D" parent="." index="3"]

light_mask = 0
position = Vector2( 0, 3 )
enabled = false
editor_only = false
texture = ExtResource( 3 )
offset = Vector2( 0, 0 )
texture_scale = 1.0
color = Color( 0.954372, 0.972656, 0.387543, 1 )
energy = 1.8
mode = 0
range_height = 0.0
range_z_min = -1024
range_z_max = 1024
range_layer_min = 0
range_layer_max = 0
range_item_cull_mask = 13
shadow_enabled = false
shadow_color = Color( 0, 0, 0, 0.75898 )
shadow_buffer_size = 2048
shadow_gradient_length = 0.0
shadow_filter = 0
shadow_filter_smooth = 0.0
shadow_item_cull_mask = 2
script = ExtResource( 4 )
_sections_unfolded = [ "Range" ]

[node name="exhaust_sound" type="AudioStreamPlayer" parent="." index="4"]

stream = ExtResource( 5 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="exhaust_heat" type="RayCast2D" parent="." index="5"]

visible = false
enabled = true
exclude_parent = true
cast_to = Vector2( 0, 10 )
collision_mask = 1


